--- a/config.toml
+++ b/config.toml
@@ -35,11 +35,6 @@ googleAnalytics = ""
   # url = "contact/"
 
   [params.social]
-  facebook      = "full page or profile url in facebook"
-  googleplus    = "full profile url in googleplus"
   email         = "email@example.com"
-  twitter       = "full profile url in twitter"
-  linkedin      = "full profile url in linkedin"
-  stackoverflow = "full profile url in stackoverflow"
-  instagram     = "full profile url in instagram"
-  github        = "full profile url in github"
+  twitter       = "https://twitter.com/pridecodes"
+  github        = "https://github.com/devjack/pride.codes"
