--- a/config.toml
+++ b/config.toml
@@ -16,8 +16,8 @@ googleAnalytics = ""
   description = "Proudly celebrating engineering diversity."
   copyright = ""
   sidebarAbout = [
-    "pride.codes is a collection of simple web UI elements to add a touch of colour to any website.",
-    "We want companies worldwide to celebrate their LGBTQI+ team members by adding a pride.codes element to their site."
+    "pride.codes provides a collection of simple widgets for businesses to add to their sites. We want businesses to show their support for their LGBTQI+ colleagues who are affected by this vote, regardless of their corporate political stance.",
+    "The site offers a range of widgets to fly the flag. A collection of political flags is also available for those who are taking stronger #VoteYes position."
   ]
   email = ""
 
