Added the GA trackign code

--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ theme = "pride-codes"
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
 # Enable Google Analytics by entering your tracking code
-googleAnalytics = ""
+googleAnalytics = "UA-106326008-1"
 
 [params]
   # Style options: default (pink), blue, green, pink, red, sea, violet
