--- a/config.toml
+++ b/config.toml
@@ -53,7 +53,7 @@ googleAnalytics = ""
     content="https://pride.codes"
 [[params.meta]]
     property="og:image"
-    content="https://pride.codes/img/logo_png_small.png"
+    content="https://cdn.pride.codes/img/logo_png_small.png"
 [[params.meta]]
     property="article:published_time"
     content="2017-09-12"
