Removed 'Aussie' from og:tags
Removing references making it Australian only. The web, after all, is global! :)

--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ googleAnalytics = "UA-106326008-1"
   copyright = ""
   sidebarAbout = [
     "pride.codes provides a collection of simple widgets for businesses to add to their sites. We want businesses to actively show their support for their LGBTQI+ colleagues.",
-    "We want Aussie businesses to 'fly the flag'.",
+    "We want businesses to 'fly the flag'.",
   ]
   email = ""
 
@@ -53,7 +53,7 @@ googleAnalytics = "UA-106326008-1"
     content="pride.codes"
 [[params.meta]]
     property="og:description"
-    content="Helping Aussies to 'fly the flag' and show their support for their LGBTQI+ friends and colleagues."
+    content="Helping to 'fly the flag' and show their support for  LGBTQI+ friends and colleagues."
 [[params.meta]]
     property="og:url"
     content="https://pride.codes"
