--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ googleAnalytics = "UA-106326008-1"
   description = "Proudly celebrating engineering diversity."
   copyright = ""
   sidebarAbout = [
-    "pride.codes provides a collection of simple widgets for businesses to add to their sites. We want businesses to actively show their support for their LGBTQI+ colleagues.",
+    "pride.codes provides a collection of simple widgets for businesses to add to their sites. We want businesses to actively show their support for their LGBTQIA+ colleagues.",
     "We want businesses to 'fly the flag'.",
   ]
   email = ""
@@ -54,7 +54,7 @@ googleAnalytics = "UA-106326008-1"
     content="pride.codes"
 [[params.meta]]
     property="og:description"
-    content="Helping to 'fly the flag' and show their support for  LGBTQI+ friends and colleagues."
+    content="Helping to 'fly the flag' and show their support for  LGBTQIA+ friends and colleagues."
 [[params.meta]]
     property="og:url"
     content="https://pride.codes"
